add security operation to me endpoint
